--- a/.travis.yml
+++ b/.travis.yml
@@ -94,14 +94,7 @@ before_install:
   - cd $TRAVIS_BUILD_DIR
 
 install:
-  - pip install nose
-  - pip install pytz
-  - pip install flake8
-  - pip install pytest
+  - pip install tox-travis
 
 script:
-  - nosetests -x --ignore-files=test_scram.py
-  - pytest tests/test_scram.py
-  - python -m doctest README.adoc
-  - flake8 --exclude venv,.tox,build,versioneer.py
-  - python setup.py check
+  - tox
