--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,9 @@ before_install:
   - psql -U postgres -tc 'show server_version;'
   - psql -U postgres -tc "alter user postgres with password 'pw';"
   - psql -U postgres -tc "alter system set client_min_messages = notice;"
+  - if [ ${DB} == "10" ]; then
+      psql -U postgres -tc "alter system set password_encryption = 'scram-sha-256';";
+    fi
   - sudo systemctl reload postgresql@${DB}-main
   - psql -U postgres -tc 'show client_min_messages;'
   - cd $TRAVIS_BUILD_DIR
