--- a/.travis.yml
+++ b/.travis.yml
@@ -66,15 +66,14 @@ before_install:
   - sudo echo "host pg8000_password all 127.0.0.1/32 password" >> pg_hba.conf
   - if [ ${DB} == "10" ]; then
       sudo echo "host pg8000_scram_sha_256 all 127.0.0.1/32 scram-sha-256" >> pg_hba.conf;
+      sudo chmod ugo+rw postgresql.conf;
+      sudo echo "password_encryption = scram-sha-256" >> postgresql.conf;
     fi
   - cat old_pg_hba.conf >> pg_hba.conf
   - sudo systemctl start postgresql@${DB}-main
   - psql -U postgres -tc 'create extension hstore;'
   - psql -U postgres -tc 'show server_version;'
   - psql -U postgres -tc "alter system set client_min_messages = notice;"
-  - if [ ${DB} == "10" ]; then
-      psql -U postgres -tc "alter system set password_encryption = 'scram-sha-256';";
-    fi
   - psql -U postgres -tc "alter user postgres with password 'pw';"
   - sudo systemctl reload postgresql@${DB}-main
   - psql -U postgres -tc 'show client_min_messages;'
